# scikit-criteria

./: .coveragerc  .envrc  .gitignore  .header-template  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE.rst  LICENCE.txt  LICENSE.txt  MANIFEST.in  Pruebas.ipynb  README.md  README.rst  Untitled.ipynb  VIKOR_benchmark.ipynb  coso.py  ejemplo.py  ez_setup.py  importante.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/workflows/: CI.yml  build.yml  publish.yml  tests.yml
ahp_ext/: ahp.py  test_ahp.py  tuto.ipynb
doc/: Makefile  make.bat  quickstart.ipynb  requirements.txt
doc/source/: conf.py  core.rst  index.rst  install.rst
docs/: Makefile  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  install.rst  refs.bib
legacy/: __init__.py  base.py  norm.py
legacy/madm/: __init__.py  electre.py  simple.py  simus.py
legacy/plot/: bars.py  radar.py  violin.py
legacy/tests/: run.py  tcore.py  test_norm.py  test_plot.py  test_rank.py  test_validate.py
legacy/utils/: __init__.py  acc_property.py  lp.py
legacy/weights/: critic.py  equal.py
notebooks/: AHP.ipynb  Normalization.ipynb  Rank.ipynb  best_music_service_for_argentina.ipynb  electre_1.ipynb  montecarlo_mc.ipynb  normalization.ipynb  topsis_example.ipynb
skcriteria/: __init__.py  _core.py  _oop.py  ahp.py  attribute.py  base.py  combinatorial.py  core.py  data.py  divcorr.py  dmaker.py  electre.py  extend.py  filters.ipynb  io.py  madm.py  moora.py  norm.py  oocore.py  pipeline.py  plot.py  rank.py  serializer.py  testing.py  tiebreaker.py  topsis.py  util.py  validate.py  weights.py  wprod.py  wsum.py
skcriteria/agg/: __init__.py  _agg_base.py  _madm_base.py  aras.py  cocoso.py  codas.py  copras.py  edas.py  electre.py  ervd.py  mabac.py  moora.py  ocra.py  probid.py  ram.py  rim.py  similarity.py  simple.py  simus.py  spotis.py  test_mabac.py  topsis.py  vikor.py  waspas.py
skcriteria/cmp/: __init__.py  ranks_cmp.py
skcriteria/common/: __init__.py  norm.py  oop.py  rank.py  util.py
skcriteria/core/: __init__.py  _base.py  data.py  dominance.py  methods.py  objectives.py  plot.py  stats.py
skcriteria/datasets/: __init__.py  base.py
skcriteria/io/: __init__.py  dmsy.py
skcriteria/madm/: __init__.py  _base.py  _cmp.py  _core.py  _dmaker.py  _electre.py  _madm_base.py  _maut.py  _moora.py  _similarity.py  _simple.py  _simus.py  closeness.py  electre.py  moora.py  similarity.py  simple.py  simus.py  topsis.py  wprod.py  wsum.py
skcriteria/norm/: __init__.py  invert_objective.py  max_normalizer.py  range_normalizer.py  sum.py  sum_normalizer.py  vector_normalizer.py
skcriteria/pipelines/: __init__.py  combinatorial.py  pipeline.py  simple_pipeline.py
skcriteria/plot/: __init__.py  bars.py  box.py  multihist.py  plot.py  radar.py  scmtx.py  violin.py
skcriteria/preprocess/: __init__.py  add_eps_to_zero.py  add_value_to_zero.py  invert_objectives.py  max_scaler.py  minmax_scaler.py  push_negatives.py  standar_scaler.py  sum_scaler.py  vector_scaler.py
skcriteria/preprocessing/: __init__.py  _add_value_to_zero.py  _distance.py  _invert_objectives.py  _preprocessing_base.py  _push_negatives.py  _scalers.py  _weighters.py  add_value_to_zero.py  distance.py  filters.py  impute.py  increment.py  invert_objectives.py  push_negatives.py  scalers.py  weighters.py
skcriteria/ranksrev/: __init__.py  rank_invariant_check.py  rank_transitivity_check.py  trans_check.py  transit_check.py  transitivity_check.py
skcriteria/tests/: __init__.py  __main__.py  core.py  run.py  tcore.py  test__core.py  test__oop.py  test_ahp.py  test_base.py  test_common.py  test_core.py  test_datasets.py  test_dmaker.py  test_electre.py  test_io.py  test_moora.py  test_norm.py  test_plot.py  test_rank.py  test_topsis.py  test_util.py  test_validate.py  test_weights.py  test_wprod.py  test_wsum.py  utils.py
skcriteria/utils/: __init__.py  accabc.py  bunch.py  cmanagers.py  lp.py  (+15 more)
tests/: __init__.py  __main__.py  conftest.py  core.py  test__oop.py  test_base.py  test_combinatorial.py  test_data.py  test_extend.py  test_madm.py  test_norm.py  test_pipeline.py  test_plot.py  test_rank.py  test_suite.py  test_testing.py  test_tiebreaker.py  test_util.py
tools/: checkapidocsdir.py  checkheader.py  checktestdir.py
(+279 files in other folders)
