[tool.black]
line-length = 79
target-version = ["py38"]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
    "tests",
]

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-criteria"
version = "0.9.dev0"
authors = [{name = "Juan B Cabral & QuatroPe", email = "jbcabral@unc.edu.ar"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
description = "Scikit-Criteria is a collections of algorithms, methods and techniques for multiple-criteria decision analysis."
keywords = [
    "muticriteria",
    "mcda",
    "mcdm",
    "weightedsum",
    "weightedproduct",
    "simus",
    "topsis",
    "moora",
    "electre",
    "critic",
    "entropy",
    "dominance",
    "packaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://scikit-criteria.quatrope.org/", Repository = "https://github.com/quatrope/scikit-criteria" }
dependencies = [
    "numpy>=1.0,<2.0",
    "pandas",
    "scipy",
    "jinja2",
    "custom_inherit",
    "seaborn>=0.13,<0.14",
    "pulp>=2.8,<2.9",
    "Deprecated",
    "scikit-learn>=1.3,<1.4",
    "matplotlib>=3.8.2,<3.9",
    "importlib_metadata",
    "methodtools",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skcriteria", "skcriteria.*"]
namespaces = false
